Agrego soporte a veedores
